2011-05-10  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1): Don't take
	`default' for a tentative defun, unlike anything else starting
	with `def'.

2011-05-10  Nikodemus Siivola  <nikodemus@random-state.net>

	slime-indentation: indentation improvements on defmethod and
	lambda-lists for cl-indent.el by Didier Verna, from emacs-devel.

	* slime-cl-indent.el: Advertise the changes and remove obsolete TODO
        entries.
	* slime-cl-indent.el (lisp-lambda-list-keyword-alignment):
	* slime-cl-indent.el (lisp-lambda-list-keyword-parameter-indentation):
	* slime-cl-indent.el (lisp-lambda-list-keyword-parameter-alignment): New
        customizable user options.
	* slime-cl-indent.el (lisp-indent-defun-method): Improve docstring.
	* slime-cl-indent.el (extended-loop-p): Fix comment.
	* slime-cl-indent.el (lisp-indent-lambda-list-keywords-regexp): New
        variable.
	* slime-cl-indent.el (lisp-indent-lambda-list): New function.
	* slime-cl-indent.el (lisp-indent-259): Use it.
	* slime-cl-indent.el (lisp-indent-defmethod): Support for more than one
        method qualifier and properly indent methods lambda-lists.
	* slime-cl-indent.el: Provide a missing common-lisp-indent-function
        property for defgeneric.

2011-05-10  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el: New file. Copy of cl-indent.el from current
	GNU Emacs HEAD. Replaces the ancient copy previously kept as part
	of slime-indentation.el.
	* slime-indentation.el (slime-handle-indentation-update): Deleted.
	Since we now directly replace the previous version of
	cl-indent.el, the normal version defined in slime.el works fine.
	ALSO DELETED: the inline copy of 1995 vintage cl-indent.el.

2011-03-14  Stas Boukarev  <stassats@gmail.com>

	* swank-sprof.lisp (swank-sprof-get-call-graph): Don't call
	serialize-call-graph when there's no samples. That prevents it
	from crashing.

2011-03-13  Stas Boukarev  <stassats@gmail.com>
